--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Кваст</title>
-  </head>
-  <body>
-
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Кваст</title>
+    </head>
+    <body>
+        <h1>Тест</h1>
+    </body>
 </html>
