--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
     <head>
         <meta charset="utf-8">
         <title>Кваст</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Тест</h1>
+        <div class="page-header">
+            <div class="header-top">
+                <div class="header-logo">
+                    <img src="img/logo.png" alt="Кваст" width="140" height="76">
+                </div>
+                <ul class="main-nav">
+                    <li><a href="#">История</a></li>
+                    <li><a href="#">Производство</a></li>
+                    <li><a href="#">Ассортимент</a></li>
+                    <li><a href="#">Где купить</a></li>
+                </ul>
+            </div>
+            <div class="promo">Крафтовый квас<br> всему голова!</div>
+        </div>
+
+        <!-- Еще шесть верхних блоков -->
+
+        <div class="page-footer">
+            <!-- HTML-код подвала -->
+        </div>
     </body>
 </html>
