--- a/index.html
+++ b/index.html
@@ -21,7 +21,93 @@
             <div class="promo">Крафтовый квас<br> всему голова!</div>
         </div>
 
-        <!-- Еще шесть верхних блоков -->
+        <!-- Новинки -->
+        <div class="novelty">
+            <h2>Новинки</h2>
+            <div class="novelty-items">
+                <div class="novelty-item">
+                    <h3>Вахтёр</h3>
+                    <table>
+                        <tr>
+                            <td>Алк.</td>
+                            <td>< 1%</td>
+                        </tr>
+                        <tr>
+                            <td>Ккал:</td>
+                            <td>35</td>
+                        </tr>
+                    </table>
+                    <p>Ржаной хлеб, Вода, Солод, Соль</p>
+                    <img src="img/bottle-left.jpg" alt="Кваст «Вахтёр»" width="319" height="459">
+                    <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
+                    <a class="btn" href="#">Подробнее</a>
+                    <a class="btn" href="#">Купить</a>
+                    <b>150 Р.</b>
+                </div>
+                <div class="novelty-item">
+                    <h3>Романтик</h3>
+                    <table>
+                        <tr>
+                            <td>Алк.</td>
+                            <td>< 0,5%</td>
+                        </tr>
+                        <tr>
+                            <td>Ккал:</td>
+                            <td>27</td>
+                        </tr>
+                    </table>
+                    <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
+                    <img src="img/bottle-right.jpg" alt="Кваст «Вахтёр»" width="319" height="459">
+                    <p>Легкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
+                    <a class="btn" href="#">Подробнее</a>
+                    <a class="btn" href="#">Купить</a>
+                    <b>90 Р.</b>
+                </div>
+            </div>
+        </div>
+
+        <!-- Преимущества -->
+        <div class="features">
+            <ul>
+                <li class="feature-item">
+                    <h2>Варим сами</h2>
+                    <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
+                </li>
+                <li class="feature-item">
+                    <h2>Своё, родное</h2>
+                    <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
+                </li>
+                <li class="feature-item">
+                    <h2>Не экономим</h2>
+                    <p>Человек это то, что он ест и пьет. У нас только качественные ингридиенты.</p>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Немного истории -->
+        <div class="history-kvass">
+            <h2>Немного истории</h2>
+            <dl>
+                <dt>
+                    <h3>Происхождение кваса</h3>
+                    <i>Источник:</i>
+                    <a target="_blank" href="https://ru.wikipedia.org">ru.wikipedia.org</a>
+                </dt>
+                <dd>
+                    <img src="img/wiki-1.png" alt="Происхождение кваса" width="200" height="101">
+                    <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
+                </dd>
+                <dt>
+                    <h3>Классификация кваса</h3>
+                    <i>Источник:</i>
+                    <a target="_blank" href="https://ru.wikipedia.org">ru.wikipedia.org</a>
+                </dt>
+                <dd>
+                    <img src="img/wiki-2.png" alt="Классификация кваса" width="200" height="101">
+                    <p>По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.</p>
+                </dd>
+            </dl>
+        </div>
 
         <div class="page-footer">
             <!-- HTML-код подвала -->
