--- a/index.html
+++ b/index.html
@@ -109,8 +109,128 @@
             </dl>
         </div>
 
+        <!-- Пресса о нас -->
+        <div class="press">
+            <h2>Пресса о нас</h2>
+            <div class="news-list">
+                <blockquote class="new-item">
+                    <p>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</p>
+                    <cite>Газета столичный Стольник</cite>
+                    <a class="btn" href="#">Читать далее</a>
+                </blockquote>
+            </div>
+        </div>
+
+        <!-- Ассортимент -->
+        <div class="assortment">
+            <h2>Ассортимент</h2>
+            <table>
+                <tr>
+                    <th>Название</th>
+                    <th>Алк.</th>
+                    <th>Ккал</th>
+                    <th>Объём</th>
+                    <th>Стоимость</th>
+                </tr>
+                <tr>
+                    <td>Классика</td>
+                    <td>< 1,2%</td>
+                    <td>33</td>
+                    <td>330 мл</td>
+                    <td>120 Р.</td>
+                </tr>
+                <tr>
+                    <td>Шабаш</td>
+                    <td>> 1,2%</td>
+                    <td>45</td>
+                    <td>330 мл</td>
+                    <td>250 Р.</td>
+                </tr>
+                <tr>
+                    <td>Вахтёр <sup>Новинка</sup></td>
+                    <td>< 1%</td>
+                    <td>35</td>
+                    <td>0,5 л</td>
+                    <td>150 Р.</td>
+                </tr>
+                <tr>
+                    <td>Романтик <sup>Новинка</sup></td>
+                    <td>< 0,5%</td>
+                    <td>27</td>
+                    <td>0,5 л</td>
+                    <td>90 Р.</td>
+                </tr>
+            </table>
+        </div>
+
+        <!-- Заказать -->
+        <div class="order">
+            <h2>Заказать</h2>
+            <p class="order-tip">Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%.</p>
+            <form class="order-form" action="" method="post">
+                <div class="order-form-group">
+                    <label for="fullname">Представьтесь:</label>
+                    <input type="text" name="fullname" id="fullname">
+                </div>
+                <div class="order-form-group">
+                    <label for="phone">Номер телефона:</label>
+                    <input type="text" name="phone" id="phone">
+                </div>
+                <div class="order-form-group">
+                    <label for="additional-number">Доп. номер:</label>
+                    <input type="text" name="additional-number" id="additional-number">
+                </div>
+                <div class="order-form-group">
+                    <label for="email">Email:</label>
+                    <input type="text" name="email" id="email">
+                </div>
+                <div class="order-form-group">
+                    <label for="amount-order">Объем заказа:</label>
+                    <select name="amount-order" id="amount-order">
+                        <option value="1">От 5 до 10 баррелей в неделю</option>
+                    </select>
+                </div>
+                <div class="order-form-group">
+                    <label for="message">Доп. комментарий:</label>
+                    <textarea name="message" id="message" rows="10" cols="96"></textarea>
+                </div>
+                <div class="checkbox-area">
+                    <label>
+                        <input type="checkbox" name="subscription">
+                        Я согласен получать квасную рассылку
+                    </label>
+                </div>
+                <input type="submit" class="btn" value="Отправить заказ">
+            </form>
+        </div>
+
         <div class="page-footer">
-            <!-- HTML-код подвала -->
+            <div class="footer-top">
+                <div class="footer-logo">
+                    <img src="img/logo.png" alt="Кваст" width="140" height="76">
+                </div>
+            </div>
+            <div class="footer-middle">
+                <ul class="main-nav">
+                    <li><a href="#">История</a></li>
+                    <li><a href="#">Производство</a></li>
+                    <li><a href="#">Ассортимент</a></li>
+                    <li><a href="#">Где купить</a></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <div class="footer-social">
+                    <a class="social-btn" href="https://instagram.com/htmlacademy">Инстаграм</a>
+                    <a class="social-btn" href="https://facebook.com/htmlacademy">Фейсбук</a>
+                    <a class="social-btn" href="https://vk.com/htmlacademy">Вконтакте</a>
+                </div>
+                <p>При перепечатке материалов ссылка на сайт обязательна!</p>
+                <div class="footer-copyright">
+                    <img src="img/htmlacademy.png" width="27" height="34" alt="HTML Academy">
+                    <b>Разработчик:</b>
+                    <a href="https://htmlacademy.ru">HTML Academy</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
